{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 12,
  "lineage": "b93a06fe-c86d-568a-4c99-13794103cb2c",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "leocella_nginx_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa75d35c5505a879",
            "arn": "arn:aws:ec2:us-west-1:794196173640:instance/i-0a0c3a4e8ec65f1ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0c3a4e8ec65f1ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e45150083d2b014",
            "private_dns": "ip-172-110-3-24.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.110.3.24",
            "public_ip": "54.153.97.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02cbd43f4506ef7ac",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002477f436f93b73b",
            "tags": {
              "Name": "leocella-nginx_ec2"
            },
            "tags_all": {
              "Name": "leocella-nginx_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0695cfbde9134d9e5"
            ]
          },
          "dependencies": [
            "module.loadbalancer.aws_security_group.leocella_nginx_sg",
            "module.loadbalancer.data.aws_ami.imagem_ec2",
            "module.vpc.aws_subnet.subnet_pub01",
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "leocella_nginx_ei",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:network-interface/eni-0706e9d4509829f53",
            "id": "eni-0706e9d4509829f53",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ff:cb:b2:e2:7f",
            "owner_id": "794196173640",
            "private_ip": "172.110.3.110",
            "private_ip_list": [
              "172.110.3.110"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.110.3.110"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b2fea93fbc59adac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002477f436f93b73b",
            "tags": {
              "Name": "leocella_nginx_ei"
            },
            "tags_all": {
              "Name": "leocella_nginx_ei"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.subnet_pub01",
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "leocella_nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:security-group/sg-0695cfbde9134d9e5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0695cfbde9134d9e5",
            "ingress": [],
            "name": "leocella_nginx_sg",
            "name_prefix": "",
            "owner_id": "794196173640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leocella-nginx_sg"
            },
            "tags_all": {
              "Name": "leocella-nginx_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a83df1b341fc678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "leocella_egress_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:security-group-rule/sgr-02e2da1020bf8f571",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02e2da1020bf8f571",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0695cfbde9134d9e5",
            "security_group_rule_id": "sgr-02e2da1020bf8f571",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_security_group.leocella_nginx_sg",
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "leocella_ingress_22_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:security-group-rule/sgr-09bb852c3f454655e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09bb852c3f454655e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0695cfbde9134d9e5",
            "security_group_rule_id": "sgr-09bb852c3f454655e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_security_group.leocella_nginx_sg",
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "leocella_ingress_80_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:security-group-rule/sgr-06632aa475467c457",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06632aa475467c457",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0695cfbde9134d9e5",
            "security_group_rule_id": "sgr-06632aa475467c457",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_security_group.leocella_nginx_sg",
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_priv01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:subnet/subnet-08c2601430fd8964d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.110.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2601430fd8964d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794196173640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "leocella-subnet_priv01"
            },
            "tags_all": {
              "Name": "leocella-subnet_priv01"
            },
            "vpc_id": "vpc-09a83df1b341fc678"
          },
          "dependencies": [
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_priv02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:subnet/subnet-00b53efdcc58e11fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.110.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b53efdcc58e11fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794196173640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "leocella-subnet_priv02"
            },
            "tags_all": {
              "Name": "leocella-subnet_priv02"
            },
            "vpc_id": "vpc-09a83df1b341fc678"
          },
          "dependencies": [
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_pub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:subnet/subnet-002477f436f93b73b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.110.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002477f436f93b73b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794196173640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "leocella-subnet_pub01"
            },
            "tags_all": {
              "Name": "leocella-subnet_pub01"
            },
            "vpc_id": "vpc-09a83df1b341fc678"
          },
          "dependencies": [
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_pub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:subnet/subnet-04dd40442dceba801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.110.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dd40442dceba801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794196173640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "leocella-subnet_pub02"
            },
            "tags_all": {
              "Name": "leocella-subnet_pub02"
            },
            "vpc_id": "vpc-09a83df1b341fc678"
          },
          "dependencies": [
            "module.vpc.aws_vpc.leocella_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "leocella_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:794196173640:vpc/vpc-09a83df1b341fc678",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.110.0.0/16",
            "default_network_acl_id": "acl-070fb842b9a770189",
            "default_route_table_id": "rtb-076abc0cb6a34e224",
            "default_security_group_id": "sg-0b2fea93fbc59adac",
            "dhcp_options_id": "dopt-04c14e1ff8a9c848f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a83df1b341fc678",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076abc0cb6a34e224",
            "owner_id": "794196173640",
            "tags": {
              "Name": "leocella-vpc"
            },
            "tags_all": {
              "Name": "leocella-vpc"
            }
          }
        }
      ]
    }
  ]
}